--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "i18next": "^24.2.1",
     "i18next-http-backend": "^3.0.2",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
