--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.3.1",
+    "@mui/lab": "^6.0.0-beta.30",
     "@mui/material": "^6.3.1",
+    "@mui/x-date-pickers": "^7.27.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
