--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
